--- a/config.yaml
+++ b/config.yaml
@@ -12,35 +12,35 @@ markup:
 
 Menus:
   main:
-    - identifier: gallery
-      name: Gallery
-      title: Blog posts
-      url: /gallery
-      weight: 2
+    # - identifier: gallery
+    #   name: Gallery
+    #   title: Blog posts
+    #   url: /gallery
+    #   weight: 2
 
-    # Dropdown menu
-    - identifier: dropdown
-      title: Example dropdown menu
-      name: Dropdown
-      weight: 3
-    - identifier: dropdown1
-      title: example dropdown 1
-      name: example 1
-      url: /#
-      parent: dropdown
-      weight: 1
-    - identifier: dropdown2
-      title: example dropdown 2
-      name: example 2
-      url: /#
-      parent: dropdown
-      weight: 2
+    # # Dropdown menu
+    # - identifier: dropdown
+    #   title: Example dropdown menu
+    #   name: Dropdown
+    #   weight: 3
+    # - identifier: dropdown1
+    #   title: example dropdown 1
+    #   name: example 1
+    #   url: /#
+    #   parent: dropdown
+    #   weight: 1
+    # - identifier: dropdown2
+    #   title: example dropdown 2
+    #   name: example 2
+    #   url: /#
+    #   parent: dropdown
+    #   weight: 2
 
 params:
   title: "sharnko.net"
-  description: Text about my cool site
+  description: Sharn-Konet Reitsma's Website!
   # staticPath: ""  # The path to serve the static files from
-  # favicon: ".png"
+  favicon: "portal.png"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -196,7 +196,7 @@ params:
       - title: "Bachelor of Engineering (Honours)"
         school:
           name: "University of Auckland"
-          url: "https://example.org"
+          url: "https://www.auckland.ac.nz/en.html"
         date: "2018 - 2021"
         GPA: "?.? out of 9"
         content: ""
