--- a/config.yaml
+++ b/config.yaml
@@ -12,35 +12,42 @@ markup:
 
 Menus:
   main:
-    # - identifier: gallery
-    #   name: Gallery
-    #   title: Blog posts
-    #   url: /gallery
-    #   weight: 2
+    - identifier: home
+      name: Home
+      url: /
+      weight: 1
 
-    # # Dropdown menu
-    # - identifier: dropdown
-    #   title: Example dropdown menu
-    #   name: Dropdown
-    #   weight: 3
-    # - identifier: dropdown1
-    #   title: example dropdown 1
-    #   name: example 1
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 1
-    # - identifier: dropdown2
-    #   title: example dropdown 2
-    #   name: example 2
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 2
+    # Dropdown menu
+    - identifier: projects
+      title: Example dropdown menu
+      name: Projects
+      weight: 2
+    - identifier: flo
+      title: Flo
+      name: Flo
+      url: /projects/flo
+      parent: projects
+      weight: 1
+    - identifier: messenger-insights
+      title: Messenger Insights
+      name: Messenger
+      url: /projects/messenger
+      parent: projects
+      weight: 2
+
+    - identifier: gallery
+      name: Gallery
+      title: gallery
+      url: /gallery
+      weight: 3
+
 
 params:
   title: "sharnko.net"
   description: Sharn-Konet Reitsma's Website!
   # staticPath: ""  # The path to serve the static files from
-  favicon: "portal.png"
+  favicon: "/images/portal.png"
+
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -78,10 +85,10 @@ params:
   #     secondaryColor:
 
   # If you want to customize the menu, you can change it here
-  # navbar:
-  #   align: mx-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
-  #   brandLogo: "/logo.png" # Logo for the brand | default is the favicon variable
-  #   brandName: "Profile" # Brand name for the brand | default is the title variable
+  navbar:
+    # align: mx-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
+    brandLogo: "/images/empty.svg" # Logo for the brand | default is the favicon variable
+    brandName: "sharnko.net" # Brand name for the brand | default is the title variable
 
     menus:
       disableAbout: true
