--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.55.0",
+		"svelte-awesome-icons": "^0.2.11",
 		"svelte-check": "^2.9.2",
+		"svelte-dark-mode": "^2.1.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
