--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@svelteuidev/composables": "^0.7.7",
+		"@svelteuidev/core": "^0.7.7",
 		"sveltestrap": "^5.10.0"
 	}
 }
