--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"netlify-cli": "^12.5.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.55.0",
@@ -39,6 +40,7 @@
 	"dependencies": {
 		"@svelteuidev/composables": "^0.7.7",
 		"@svelteuidev/core": "^0.7.7",
+		"svelte-inview": "^3.0.1",
 		"sveltestrap": "^5.10.0"
 	}
 }
