--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-static/gallery/DSC02179-cropped-to-match.jpg filter=lfs diff=lfs merge=lfs -text
-static/gallery/DSC02436-cropped-to-match.jpg filter=lfs diff=lfs merge=lfs -text
+static/gallery/* filter=lfs diff=lfs merge=lfs -text
