--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
 		"@svelteuidev/composables": "^0.7.7",
 		"@svelteuidev/core": "^0.7.7",
 		"svelte-inview": "^3.0.1",
-		"sveltestrap": "^5.10.0"
+		"sveltestrap": "^5.10.0",
+
+    "wasm-server": "0.0.4",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11"
 	}
 }
